# ForzaETH_race_stack

./: .activate_forza.sh  .gitignore  .gitmodules  README.md  forza_rviz.rviz  team.md
.install_utils/: post_create_command.sh
base_system/f110_simulator/f1tenth_gym/docs/: basic_usage.rst  customized_usage.rst
base_system/f110_simulator/f1tenth_gym/docs/html/: classf110__gym_1_1envs_1_1f110__env_1_1_f110_env.html
base_system/f110_simulator/f1tenth_gym/docs/xml/: ____init_____8py.xml  classf110__gym_1_1envs_1_1f110__env_1_1_f110_env.xml  f110__env_8py.xml  f110__gym_2____init_____8py.xml  legacy__scan__gen_8py.xml  namespacef110__gym_1_1unittest_1_1legacy__scan__gen.xml
base_system/f110_simulator/f1tenth_gym/examples/: waypoint_follow.py
base_system/f110_simulator/f1tenth_gym/gym/f110_gym/: __init__.py
base_system/f110_simulator/f1tenth_gym/gym/f110_gym/envs/: base_classes.py  f110_env.py
base_system/f110_simulator/f1tenth_gym/gym/f110_gym/unittest/: legacy_scan_gen.py
base_system/f110_simulator/f1tenth_gym_ros/config/: sim.yaml
base_system/f110_simulator/f1tenth_gym_ros/maps/: hall.yaml  hall_orig.yaml  map_2024.pgm  map_2024.yaml  map_2024_converted.yaml  teras.yaml  teras_map.yaml  teras_orig.yaml
base_system/f1tenth_system/: .gitmodules
controller/: setup.py
controller_cpp/: CMakeLists.txt
controller_cpp/include/: ftg.hpp  lookup_steer_angle.hpp  map.hpp  pp.hpp
controller_cpp/src/: controller_manager_cpp.cpp  ftg.cpp  lookup_steer_angle.cpp  map.cpp  pp.cpp
particle_filter/config/: localize.yaml
particle_filter/range_libc/pywrapper/: setup.py
perception_cpp/: CMakeLists.txt
perception_cpp/src/: detect.cpp  tracking.cpp
planner/global_planner/global_planner/global_racetrajectory_optimization/global_racetrajectory_optimization/opt_mintime_traj/src/: opt_mintime.py
sensors/vesc/vesc_ackermann/src/: vesc_to_odom.cpp
sensors/vesc/vesc_driver/src/: vesc_driver.cpp
stack_master/: setup.py
utilities/libraries/frenet_conversion_cpp/: CMakeLists.txt
utilities/libraries/frenet_conversion_cpp/src/: frenet_converter_cpp.cpp
utilities/nodes/frenet_odom_republisher_cpp/: CMakeLists.txt
utilities/nodes/frenet_odom_republisher_cpp/src/: frenet_odom_republisher.cpp
utilities/nodes/opponent_publisher_cpp/: CMakeLists.txt
utilities/nodes/opponent_publisher_cpp/src/: collision_detector.cpp  opponent_publisher.cpp
utilities/nodes/sector_tuner/: setup.py
